# arxiv_vector_search

./: .gitignore  pyproject.toml  pyrefly.toml
arxiv_vector_search/: __main__.py
arxiv_vector_search/db/: __init__.py  db.py  tables.py
arxiv_vector_search/documents/: __init__.py  document.py  downloader.py
arxiv_vector_search/documents/arxiv/: __init__.py  arxiv_document.py  arxiv_downloader.py  arxiv_updater.py
arxiv_vector_search/documents/doi/: __init__.py  doi_document.py  doi_downloader.py
arxiv_vector_search/documents/url/: __init__.py  url_document.py  url_downloader.py
arxiv_vector_search/processors/: __init__.py  embedder.py  splitter.py
migrations/: init_to_restructure_4_21_26.py
tools/: find_batch.py  pagelen_histogram.py
