[project]
name = "arxiv_vector_search"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "sentence-transformers",
  "torch",
  "triton-rocm",
  "google-cloud-storage",
  "langchain-text-splitters",
  "SQLAlchemy",
  "pgvector",
  "psycopg[binary,pool]",
  "pymupdf",
  "flash-attn==2.8.4",
  "kagglehub[pandas-datasets]",
  "ninja",
  "packaging",
]

[[tool.uv.index]]
name = "pytorch-rocm"
url = "https://download.pytorch.org/whl/rocm7.2"
explicit = true

[tool.uv]
no-build-isolation-package = ["flash-attn"]

[tool.uv.sources]
torch = { index = "pytorch-rocm" }
triton-rocm = { index = "pytorch-rocm" }
flash-attn = { git = "https://github.com/Dao-AILab/flash-attention/", branch = "main" }

[build-system]
requires = ["setuptools>=60"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["./"]
include = ["arxiv_vector_search*"]
