[project]
name = "arxiv_vector_search"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "sentence-transformers",
  "torch",
  "triton-rocm",
  "google-cloud-storage",
  "langchain-text-splitters",
  "SQLAlchemy",
  "pgvector",
  "psycopg[binary,pool]",
  "pymupdf",
  "flash-attn==2.8.4",
  "kagglehub[pandas-datasets]",
  "pathos",
  "ninja",
  "packaging",
]

[[tool.uv.index]]
name = "pytorch-rocm"
url = "https://download.pytorch.org/whl/rocm7.2"
explicit = true

[tool.uv]
no-build-isolation-package = ["flash-attn"]

[tool.uv.extra-build-dependencies]
flash-attn = ["setuptools", "psutil"]

[tool.uv.sources]
torch = { index = "pytorch-rocm" }
triton-rocm = { index = "pytorch-rocm" }
flash-attn = { git = "https://github.com/Dao-AILab/flash-attention/", branch = "main" }

[build-system]
requires = ["uv_build>=0.11.7,<0.12"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "arxiv_vector_search"
module-root = ""
